heading alignment fixing

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,10 @@ body {
     }
     .mb-6{
     margin-bottom: 2rem;
-}
+    }
+    .custom__heading{
+        text-align: center;
+    }
 }
 @media only screen and (max-width:575.98px){
     .m-custiom{
